fix(breadcrumbs): z-index

--- a/css/main.css
+++ b/css/main.css
@@ -176,6 +176,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   border-right: 1px solid #000000;
+  z-index: 2;
 }
 
 .left-border {
